Fixes odd gap in footer meta

--- a/src/assets/css/7-components/_web-components.scss
+++ b/src/assets/css/7-components/_web-components.scss
@@ -4,6 +4,5 @@ rand-emoji {
 }
 
 footer rss-report {
-    margin-right: 0.5em;
     display: inline-block;
 }
